Add integration tests for array_push rule
Add 37 tests covering:
- Basic transformations (simple, strings, numbers, function calls, array access)
- Multi-value array_push skipping (3+ args)
- Return value usage skipping (assignment, condition, echo, return, function arg)
- Nested statements (if/else/elseif, for, foreach, while, do-while, switch, try/catch/finally)
- Class/trait methods, static methods, abstract methods
- Functions and namespaces (implicit and braced)
- Case insensitivity (ARRAY_PUSH, Array_Push)
- Edge cases (no PHP tag, empty file, deeply nested)

--- a/crates/rustor-rules/Cargo.toml
+++ b/crates/rustor-rules/Cargo.toml
@@ -7,3 +7,7 @@ edition = "2021"
 rustor-core = { path = "../rustor-core" }
 mago-syntax = "1.0"
 mago-span = "1.0"
+
+[dev-dependencies]
+bumpalo = "3.16"
+mago-database = "1.0"
