Add rustor-rector-import crate for importing Rector PHP rules
New crate that analyzes Rector PHP rule files and generates equivalent
rustor Rust rules.

Features:
- Regex-based PHP file parser for extracting rule metadata
- Pattern detection for 8 rule types (FunctionRename, FunctionAlias,
  FunctionToComparison, FunctionToCast, FunctionToOperator,
  TernaryToCoalesce, ArraySyntaxModern, ClosureToArrow)
- AST node mapping from nikic/php-parser to mago-syntax types
- Handlebars-based code generation with visitor pattern templates
- Compatibility reports in terminal, markdown, and JSON formats
- CLI with list, report, generate, and analyze commands

Tested against Rector repository:
- 468 rules analyzed
- 20 rules (4.3%) auto-generatable
- 0 parse failures

Usage:
  rustor-import-rector report -r /path/to/rector
  rustor-import-rector generate -r /path/to/rector -o ./imported/

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "crates/rustor-core",
     "crates/rustor-rules",
     "crates/rustor-cli",
+    "crates/rustor-rector-import",
 ]
 
 [profile.release]
