Add rustor-analyze crate for PHPStan-compatible static analysis
New crate providing PHPStan-compatible static analysis for PHP code.

Features:
- Custom NEON lexer and parser (no external dependencies)
- PHPStan configuration file support (phpstan.neon, phpstan.neon.dist)
- Analysis levels 0-9 (currently implementing 0-1)
- Level 0: Undefined functions, undefined classes
- Level 1: Undefined variables
- Multiple output formats: table, raw, json, github
- Baseline generation and filtering for gradual adoption
- ignoreErrors pattern matching

CLI usage:
  rustor analyze src/                    # Analyze directory
  rustor analyze -c phpstan.neon         # Use config file
  rustor analyze --level 5               # Specify level
  rustor analyze --error-format json     # JSON output
  rustor analyze --generate-baseline b.neon  # Generate baseline
  rustor analyze --baseline b.neon       # Filter with baseline

New files:
- crates/rustor-analyze/ - complete static analysis crate
- crates/rustor-cli/src/analyze.rs - CLI subcommand

Tests: 41 new tests, all passing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ members = [
     "crates/rustor-rules",
     "crates/rustor-cli",
     "crates/rustor-rector-import",
+    "crates/rustor-analyze",
 ]
 
 [profile.release]
