Rewrite baseline module for PHPStan compatibility
- Use NEON parser for proper baseline parsing (not line-by-line)
- Support regex message patterns (#^...$#) with compiled regex matching
- Support identifier field for precise error matching
- Support count tracking for multiple occurrences
- Add path normalization for cross-platform compatibility
- Generate PHPStan-compatible NEON format with tab indentation
- Add regex crate dependency for pattern matching
- Add comprehensive tests for parsing, matching, and generation

Tested with 697-entry PHPStan baseline file.

--- a/crates/rustor-analyze/Cargo.toml
+++ b/crates/rustor-analyze/Cargo.toml
@@ -24,6 +24,9 @@ thiserror = "2.0"
 # Path pattern matching for ignoreErrors
 fnmatch-regex = "0.2"
 
+# Regex for baseline pattern matching
+regex = "1.10"
+
 # Glob pattern matching
 glob = "0.3"
 
