--- a/crates/rustor-rules/Cargo.toml
+++ b/crates/rustor-rules/Cargo.toml
@@ -7,6 +7,10 @@ edition = "2021"
 rustor-core = { path = "../rustor-core" }
 mago-syntax = "1.0"
 mago-span = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.9"
+regex = "1.10"
+thiserror = "1.0"
 
 [dev-dependencies]
 bumpalo = "3.16"
