feat(yaml-rules): Integrate YAML rules with RuleRegistry and CLI
- Add load_yaml_rules_from_dir/file/string methods to RuleRegistry
- Add load_bundled_yaml_rules() for crate-shipped rules
- Add --yaml-rules and --bundled-yaml-rules CLI options
- Update process_file to accept registry reference
- Fix spread capture deserialization (check for ... suffix in Capture)
- Rename example join_to_implode rule to avoid conflict with native rule
- Add integration tests for registry and spread captures

--- a/crates/rustor-rules/rules/join_to_implode.yaml
+++ b/crates/rustor-rules/rules/join_to_implode.yaml
@@ -1,6 +1,6 @@
 # Replace join($glue, $arr) with implode($glue, $arr)
 # join() is an alias of implode() - use the canonical name
-name: join_to_implode
+name: yaml_join_to_implode
 description: "Replace join() with implode() (canonical function name)"
 category: code_quality
 min_php: "5.4"
