feat(rector-import): Add AST-based pattern detection using mago-syntax
Implement proper AST parsing for Rector PHP rule files to improve
pattern detection accuracy. The AST analyzer supplements the
regex-based approach with more precise pattern recognition.

New ast_analyzer module extracts:
- Method calls ($this->isName, etc.)
- Function calls
- Object instantiations (new Name(), new Identical(), etc.)
- String literals and return statements

Pattern detection now covers:
- FunctionRename, FunctionToComparison, FunctionToCast
- FunctionToOperator (pow -> **)
- FunctionToClassConstant (get_class -> ::class)
- FunctionToInstanceof (is_a -> instanceof)
- TernaryToCoalesce (isset -> ??)
- StrContains, StrStartsWith, StrEndsWith

Added detect_pattern_with_ast() that tries AST analysis first,
then falls back to regex-based detection for robustness.

--- a/crates/rustor-rector-import/Cargo.toml
+++ b/crates/rustor-rector-import/Cargo.toml
@@ -9,6 +9,12 @@ name = "rustor-import-rector"
 path = "src/main.rs"
 
 [dependencies]
+# PHP AST parsing
+mago-syntax = "1.0"
+mago-span = "1.0"
+mago-database = "1.0"
+bumpalo = "3.16"
+
 # Parsing and pattern matching
 regex = "1.10"
 
